<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/primary"
    tools:context="com.cryptochat.theguys.cryptochat.Controller.LoginActivity">

    <ProgressBar
        android:id="@+id/progressBar_login"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="0"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignEnd="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/linearLayout"
        android:layout_centerInParent="false"
        android:layout_marginLeft="46dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="75dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/secondary_text"
        android:textSize="35sp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/placeholder_username"
            android:inputType="textPersonName"
            android:textColor="@color/secondary_text"
            android:textColorHint="@color/secondary_text" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/placeholder_password"
            android:inputType="textPassword"
            android:textColor="@color/secondary_text"
            android:textColorHint="@color/secondary_text"
            android:fontFamily="sans-serif"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/white_button_no_border"
                android:onClick="loginAction"
                android:text="@string/placeholder_login"
                android:textColor="@color/secondary_text" />

            <Button
                android:id="@+id/button_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/white_button_no_border"
                android:onClick="registerAction"
                android:text="@string/placeholder_register"
                android:textColor="@color/secondary_text" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
